--- a/package.json
+++ b/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "main": "socket.js",
   "scripts": {
-    "dev": "nodemon socket",
-    "start": "node socket.js"
+    "dev": "nodemon socketcopy",
+    "start": "node socketcopy.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mjpeg-camera": "^2.0.0",
-    "mjpeg-consumer": "^2.0.0",
-    "node-mjpeg-proxy": "^0.3.2",
-    "nodemon": "^2.0.6",
-    "socket.io": "^2.3.0",
     "commander": "^2.3.0",
     "dev-null": "^0.1.1",
+    "mjpeg-camera": "^2.0.0",
+    "mjpeg-consumer": "^2.0.0",
     "motion-detect": "^0.2.2",
+    "node-mjpeg-proxy": "^0.3.2",
+    "nodemon": "^2.0.6",
     "request": "^2.37.0",
-    "unpipe": "^1.0.0"
+    "socket.io": "^2.3.0",
+    "unpipe": "^1.0.0",
+    "websocket": "^1.0.34"
   }
 }
