--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socketable",
-  "version": "1.0.0",
-  "main": "camera.js",
+  "name": "camera-proxy",
+  "version": "2.1.0",
+  "main": "client.js",
   "scripts": {
     "dev": "nodemon client",
     "start": "node client.js"
@@ -11,7 +11,6 @@
   "description": "",
   "dependencies": {
     "mjpeg-consumer": "^2.0.0",
-    "nodemon": "^2.0.6",
     "request": "^2.37.0",
     "socket.io-client": "^4.5.3",
     "stream": "^0.0.2",
