--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "name": "camera-proxy",
-  "version": "2.1.0",
+  "version": "2.0.0",
   "main": "client.js",
   "scripts": {
-    "dev": "nodemon client",
     "start": "node client.js"
   },
-  "author": "",
+  "author": "Kaloyan Balgoev",
   "license": "ISC",
-  "description": "",
+  "description": "Simple nodejs application for http socket tunneling to an external host.",
   "dependencies": {
-    "mjpeg-consumer": "^2.0.0",
     "request": "^2.37.0",
     "socket.io-client": "^4.5.3",
-    "stream": "^0.0.2",
-    "util": "^0.12.5"
+    "stream": "^0.0.2"
   }
 }
